add tmux-yank and setting mac terminal system preferences View -> Allow mouse reporting -> uncheck it

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,35 +1,22 @@
+# C-j+? 列出所有快捷键
 
-# Send prefix
+# Send prefix, default is C-b
 set-option -g prefix C-j
 unbind-key C-j
 bind-key C-j send-prefix
 
-# Use Alt-arrow keys to switch panes
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+# up tmux 2.2 just one line is ok
+set -g mouse on
 
-setw -g mouse-resize-pane on
-setw -g mouse-select-pane on
-setw -g mouse-select-window on
-setw -g mode-mouse on
+# 解决tmux中拖动鼠标复制的问题，1更新tmux到最小的3.*版本 2使用tpm插件管理tmux-yank插件
+# p.s. https://tmux-plugins.github.io/tmux-yank/
+# 注意： mac to enable copying using C-c again, check default Terminal application go to
+# View->"Allow mouse reporting" and uncheck it.
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
-# Shift arrow to switch windows
-bind -n S-Left previous-window
-bind -n S-Right next-window
+# Reload the tmux environment, type this inside tmux
+# tmux source-file ~/.tmux.conf
 
-# Set easier window split keys
-bind-key v split-window -h
-bind-key h split-window -v
-
-# Easy config reload
-bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
-
-# set -g mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
-
-set -g mode-mouse on
-
+run -b '/root/.tmux/plugins/tpm/tpm'
