--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,5 +18,18 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Reload the tmux environment, type this inside tmux
 # tmux source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+bind h splitw -v # default is "
+bind v splitw -h # default is %
+
+# select around pane, default is bind-o
+# select around window, default is bind-p, bind-s
+
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+
+set -g base-index 1
+setw -g pane-base-index 1
 
 run -b '/root/.tmux/plugins/tpm/tpm'
